examples/test_manifests/20220701-test-python-canary-prod/app01-python-bifid-common.service.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: app01-python-common-svc
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "app01-python-common-svc"}}}'
spec:
  selector:
    # needs to BOTH select canary and prod.
    app: app01-kupython
  ports:
  - port: 8080
    targetPort: 8080


# Canary instance 2.1:
# https://console.cloud.google.com/kubernetes/service/europe-west6/cicd-canary/default/app01-kupython/yaml/view?project=cicd-platinum-test001
  # selector:
  #   app: app01-kupython
  #   application: riccardo-cicd-platinum-path
  #   github-repo: palladius-colon-cicd-platinum-path
  #   tier: ricc-frontend-application

# Prod instance v1.4 super old:
  # selector:
  #   app: web

# manually injected
