examples/test_manifests/20220701-test-python-canary-prod/app01-python-bifid-external.gateway_and_route.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Copying sth that seems to work :)
# V1: canary
# V2: prod
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: bifid-app01-python-test-gw
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: bifid-app01-python-test
  labels:
    gateway: bifid-app01-python-test-gw
spec:
  parentRefs:
  - name: bifid-app01-python-test-gw
  hostnames:
  - "app01-bifid.palladius.it"
  rules:
  - backendRefs:
    - name: app01-python-common-svc
      port: 8080
  - matches:
    - path:
        value: /v2prod
    backendRefs:
    # PROD Service: called now Web
    # https://console.cloud.google.com/kubernetes/service/europe-west6/cicd-prod/default/web/yaml/view?project=cicd-platinum-test001
    # selector: "app: web"
    # TODO(ricc): once upgrade the prod to 2.0+ it should solve itself..
    #- name: app01-kupython
    - name: web
      port: 8080
  - matches:
    - path:
        value: /v1canary
    backendRefs:
    # name of both service and deployment
    - name: app01-kupython
      port: 8080
